Fixed handling if the KFileDialog is canceled by the user and added some more checks if the user cancel the import to get a better interactivity and a faster stop of import.

BUG:130892


svn path=/branches/KDE/3.5/kdepim/; revision=586087